--- a/seminar4/package.json
+++ b/seminar4/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^4.5.0"
   }
 }
