--- a/seminar4/package.json
+++ b/seminar4/package.json
@@ -15,15 +15,21 @@
     "@types/express": "^4.17.14",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "aws-sdk": "^2.1261.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "prisma": "^4.5.0"
   }
 }
